# Pet-Project

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  TESTING_GUIDE.md
backend/: Dockerfile  alembic.ini  migration.sql  pyproject.toml  railway.toml
backend/agents/: pipeline.py  state.py
backend/agents/nodes/: alert_checker.py  embedder.py  entity_extractor.py  normalizer.py  report_generator.py  thesis_extractor.py
backend/agents/prompts/: entity_extraction.py  report_generation.py  thesis_extraction.py
backend/api/: admin.py  alerts.py  auth.py  content.py  deps.py  investors.py  reports.py  search.py  sources.py
backend/app/: config.py  main.py
backend/database/: base.py  connection.py
backend/database/migrations/: env.py
backend/database/migrations/versions/: 001_initial_schema.py  002_add_extraction_columns.py
backend/ingestion/: base_adapter.py  content_hasher.py  loaders.py  recursive_loader.py  sec_adapter.py
backend/jobs/: digest_job.py  ingestion_job.py  processing_job.py
backend/models/: alert.py  content_item.py  extracted_mention.py  investor.py  portfolio_change.py  report.py  source.py  user.py
backend/schemas/: alert.py  content.py  investor.py  report.py  search.py  source.py
backend/services/: alert_service.py  content_service.py  email_service.py  investor_service.py  report_service.py  source_service.py  vector_store.py
backend/tests/: conftest.py
docs/: api.md  architecture.md  auto_discovery.md  byok.md  data_model.md  deployment.md  live_stream_support.md
frontend/: next.config.ts  package-lock.json  package.json  (+1 more)
(+36 files in other folders)
