[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hedge-fund-intelligence"
version = "0.1.0"
dependencies = [
    # Framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",

    # Sync DB driver (for PGVector — it uses sync SQLAlchemy)
    "psycopg2-binary>=2.9",

    # Auth
    "supabase>=2.10",

    # LangChain stack
    "langchain-community==0.3.13",
    "langchain-postgres==0.0.12",
    "langchain-openai==0.2.14",
    "langchain-text-splitters==0.3.4",
    "langgraph==0.2.60",

    # Loader dependencies
    "playwright>=1.49",
    "beautifulsoup4>=4.12",
    "newspaper3k>=0.2.8",
    "lxml>=5.3",
    "pdfplumber>=0.11",
    "trafilatura>=2.0",
    "yt-dlp>=2024.12",

    # LLM
    "openai>=1.58",
    "anthropic>=0.42",

    # SEC only (direct EDGAR REST)
    "httpx>=0.28",

    # Jobs + observability
    "apscheduler>=3.10",
    "tenacity>=9.0",
    "structlog>=24.4",
    "python-dotenv>=1.0",

    # Email
    "resend>=2.5",

    # Data
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "api", "agents", "database", "ingestion", "jobs", "models", "schemas", "services"]

[tool.ruff]
line-length = 100
target-version = "py312"
